--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,25 @@ body {
   background-color: rgb(179, 236, 234);
   color: rgb(22, 21, 21);
 }
+
+.forecast-row {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+
+@media (min-width: 992px) {
+  .forecast-row {
+    grid-template-columns: repeat(7, 1fr);
+  }
+}
+
+@media (max-width: 410px) {
+  .forecast-row {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+ul {
+  list-style: none;
+}
